# Ticker-Statistics

./: .gitignore  CMakeLists.txt  README.md  csvLogger  testStatsTracker
include/: config.h  connectionHandler.h  csvLogger.h  ema.h  messages.h  stats.h  statsTracker.h
src/: connectionHandler.cpp  csvLogger.cpp  ema.cpp  main.cpp  stats.cpp
tests/: testJsonParsing.cpp  testStatsTracker.cpp
